<resources>
    <string name="app_name">ComicsApp</string>
    <string name="unable_to_connect">Unable to connect</string>
    <string name="internet_connection_alert">Please check your device for a valid internet connection. </string>
    <string name="unknown_error">Unknown error, please try again later.</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="fetching_comic_list">Fetching Comic list ...</string>
    <string name="no_comic_items_found">No Comic items found. Please try again later.</string>
    <string name="comic_details">Comic Details</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="number_of_pages">Number of Pages</string>
    <string name="authors">Authors</string>
    <string name="action_description">Description</string>
    <string name="action_filter">Filter</string>
    <string name="total_number_of_comic_pages">Total number of comic pages:</string>
    <string name="enter_buying_price">Enter buying price</string>
    <string name="cancel">Cancel</string>

</resources>
